--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.mobitbrasil.interview</groupId>
-    <artifactId>programmer-java</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>br.com.mobitbrasil.service</groupId>
+    <artifactId>mobit-rest</artifactId>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <organization>
@@ -17,7 +17,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <java.version>11</java.version>
+        <java.version>12</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
@@ -54,6 +54,25 @@
             <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!--  Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.6.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.2.6.Final</version>
+        </dependency>
+        
+        <!-- Banco -->
+        <dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.2.14</version>
+		</dependency>
 
         <!--Test-->
         <dependency>
